--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1 style="font-color:green; font-weight:20pt;">Welcome to DEV machine</h1>
+<h1 style="font-color:green; font-weight:20pt;">Welcome to DEV machine test action</h1>
