--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<h1 style="font-color:green; font-weight:20pt;">Welcome to DEV machine</h1>
+<h1 style="font-color:green; font-weight:20pt;">Welcome to TST Machine</h1>
+<strong>Move this to production</strong>
