--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-<h1 style="font-color:green; font-weight:20pt;">Welcome to DEV Machine</h1>
-<strong>Move this to dev</strong>
+<center style="border:1px dashed #bfbfbf">
+  <h1 style="color:green; font-weight:20pt;">Welcome to DEV Machine</h1>
+  <h2>Move this to dev</h2>
+</center>
