--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <center style="border:1px dashed #bfbfbf">
   <h1 style="color:green; font-weight:20pt;">Welcome to DEV Machine</h1>
-  <h2>Move this to dev</h2>
+  <h2>This section using CI/CD Github Action. #Awesome</h2>
 </center>
