--- a/index.html
+++ b/index.html
@@ -1,4 +1,24 @@
-<center style="border:1px dashed #bfbfbf">
-  <h1 style="color:green; font-weight:20pt;">Welcome to DEV Machine</h1>
-  <h2>This section using CI/CD Github Action. #Awesome</h2>
-</center>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=
+  , initial-scale=1.0">
+  <title>CI CD</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
+<body>
+  <center style="border:1px dashed #bfbfbf">
+    <h1 style="color:green; font-weight:20pt;">Welcome to DEV Machine</h1>
+    <h2>This section using CI/CD Github Action. #Awesome</h2>
+  </center>
+
+  <div class="alert alert-success" role="alert">
+    <h4 class="alert-heading">Well done, you are in Dev Machine!</h4>
+    <p>Aww yeah, you successfully read this important alert message. its Awesome proggress</p>
+    <hr>
+    <p class="mb-0">This section using CI/CD Github Action.</p>
+  </div>
+</body>
+</html>
