--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body> 
 <div class="container">
   <div class="row">
-    <div class="alert alert-success col-sm-4 col-sm-offest-4" role="alert">
+    <div class="alert alert-success col-sm-4 col-sm-offset-4" role="alert">
       <h4 class="alert-heading">Well done, you are in Dev Machine!</h4>
       <p>Aww yeah, you successfully read this important alert message. its Awesome proggress</p>
       <hr>
