--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
 </head>
 <body> 
 <div class="container">
-  <div class="row">
-    <div class="alert alert-success col-sm-4 col-sm-offset-4" role="alert">
-      <h4 class="alert-heading">Well done, you are in Dev Machine!</h4>
-      <p>Aww yeah, you successfully read this important alert message. its Awesome proggress</p>
-      <hr>
-      <p class="mb-0">This section using CI/CD Github Action.</p>
-    </div>
+  <div class="row mt-5">
+     <div class="col-sm-4"></div>
+     <div class="col-sm-4">
+      <div class="alert alert-success" role="alert">
+        <h4 class="alert-heading">Well done, you are in Dev Machine!</h4>
+        <p>Aww yeah, you successfully read this important alert message. its Awesome proggress</p>
+        <hr>
+        <p class="mb-0">This section using CI/CD Github Action.</p>
+      </div>
+     </div>
+     <div class="col-sm-4"></div>
   </div>
 </div>
 </body>
