--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <div class="col-sm-4"></div>
      <div class="col-sm-4">
       <div class="alert alert-success" role="alert">
-        <h4 class="alert-heading">Well done, you are in Dev Machine!</h4>
+        <h4 class="alert-heading">Well done, you are in Dev Machine nice !</h4>
         <p>Aww yeah, you successfully read this important alert message. its Awesome proggress</p>
         <hr>
         <p class="mb-0">This section using CI/CD Github Action.</p>
